tests/course/errors/CreateErrorSizeOverflow.bru
meta {
  name: CreateErrorSizeOverflow
  type: http
  seq: 5
}

post {
  url: {{baseUrl}}/courses
  body: json
  auth: none
}

body:json {
  {
    "name": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum",
    "provedor": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum",
    "category": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum",
    "duration": 0,
    "verifyUrl": "https://link.y/98a169d6-7e14-45f5-8cc8-8bb901fe78a398a169d6-7e14-45f5-8cc8-8bb901fe78a398a169d6-7e14-45f5-8cc8-8bb901fe78a398a169d6-7e14-45f5-8cc8-8bb901fe78a398a169d6-7e14-45f5-8cc8-8bb901fe78a398a169d6-7e14-45f5-8cc8-8bb901fe78a398a169d6-7e14-45f5-8cc8-8bb901fe78a398a169d6-7e14-45f5-8cc8-8bb901fe78a3"
  }
}

assert {
  res.status: eq 400
  res.body.message: contains name has to be at most 100 characters
  res.body.message: contains provider has to be at most 100 characters
  res.body.message: contains duration has to be greater than or equal to 1
  res.body.message: contains verifyUrl has to be at most 256 characters
}
